imports/ui/taskRenderers/DragDropView/DragDropViewNormal.scss
.horizontal {
  width: 790px;
}

.vertical {
  height: 90%;
}

.card-scene {
  overflow-x: auto;
  overflow-y: auto;
}

.card-column-header {
  padding-top: 15px;
  margin-left: 30px;
  margin-bottom: 6px;

  font-weight: 900;
  font-size: 20px;
  line-height: 24px;

  text-align: left;
  letter-spacing: 0px;
  color: #000000;
  opacity: 1;
}

.smooth-dnd-draggable-wrapper {
  width: 368px;
}

.card-container {
  background: #f6f6f5 0% 0% no-repeat padding-box;
  box-shadow: 0px 1px 2px #00000029;
  border-radius: 44px;
  opacity: 1;
  height: 400px;
  width: 368px;
  padding-left: 20px;
  margin-right: 20px;
}

.card {
  width: 328px;
  height: 52px;

  font-weight: bold;
  font-size: 12px;
  line-height: 15px;

  background: #6a96e2 0% 0% no-repeat padding-box !important;
  box-shadow: 0px 2px 4px #00000029;
  border-radius: 22px;
  opacity: 1;

  margin-bottom: 5px;
  &.-correct{
    background-color: #66ab8c !important;
  }
  &.-incorrect{
    background-color: #f53240 !important;
  }
}

.card p {
  /* <-- Cardi B's younger brother */
  margin-left: 10px;
  margin-right: 10px;
  padding-top: 11px;

  font-weight: bold;
  font-size: 12px;
  line-height: 15px;

  text-align: left;
  letter-spacing: 0px;
  color: #ffffff;
  opacity: 1;
}

